# work_3_skypro

./: .coverage  .env.example  README.md  pyproject.toml
src/: main.py  report_20250314_185030.txt  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_reports.txt  test_services.py  test_utils.py
