[tool.poetry]
name = "pythonproject3-course-task"
version = "0.1.0"
description = ""
authors = ["Julia <yulia.2018.ivanova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.2"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"

[tool.isort]
line-length = 119

[tool.black]
line-length = 119
exclude = ".git"

[tool.flake8]
max-line-length = 119
exclude = ".git,__pycache__"

[tool.mypy]
disallow_untyped_defs = true
warn_return_anu = true
exclude = "venv"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
